--- a/index.html
+++ b/index.html
@@ -324,9 +324,9 @@ suas utinam indoctum, ex usu ceteros comprehensam, labores facilisis eu mea. Adh
       <div class="col-md-3">
         <div class="conrad">
           <h2>economy</h2>
-            <a href="">address: kafr elsheikh kallin</a>
-            <a href="">tel: 003 693 586 25</a>
-            <a href="">alaaelzayat@gmail.com</a>
+            <i class="fas fa-map-marker-alt"></i> <a href="">address: kafr elsheikh kallin</a>
+            <i class="fas fa-phone"></i><a href="">tel: 003 693 586 25</a>
+            <i class="fas fa-envelope-open"></i><a href="">alaaelzayat@gmail.com</a>
         </div>
         </div> 
         <div class="col-md-3">
