--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <header>
             <div class="container">
                 <div class="row">
-                    
+
                     <!--logo-->
                     <div class="col-md-3 col-xs-12">
                         <div class="logo">
@@ -84,11 +84,13 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="root">
+                            
                             <h4>what we do</h4>
                             <p>At Finance Plus, we focus on our our clients' most critical issues and thats greates opportunities.</p>
                             <p>Generally, the services we offer and involve preparing a financial plan or rendering financial consultation for client based on the client’s financial goals and objectives.</p>
                             <button class="read">read more</button>
                         </div>
+
                     </div>
                     <div class="col-md-3">
                         <div class="root">
@@ -345,12 +347,12 @@ suas utinam indoctum, ex usu ceteros comprehensam, labores facilisis eu mea. Adh
            <img src="images/build3.jpg"/>
            <div class="detail">
            <p>If you need a crown or lorem an implant you will pay it gap it</p>
-           <span>2 july 2018</span>
+           <div class="time">July 2, 2014</div>
        </div>
            <img src="images/build4.jpg"/>
            <div class="detail">
            <p>If you need a crown or lorem an implant you will pay it gap it</p>
-           <span>2 july 2018</span>
+           <div class="time">July 2, 2014</div>
           </div>
       </div>
         </div>
