--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     </div>
                     <!--nav-->
                     <nav class="col-md-9 col-xs-12">
-                        
-                        <ul class="nav-list">
+                    <button class="toggle-nav" style="border: 0;"><i class="fa fa-bars fa-2x"></i></button>
+                         <ul class="nav-list">
                             <li class="list"><a href="#home">home</a></li>
                             <li class="list"><a href="#about">about</a></li>
                             <li class="list"><a href="#service">service</a></li>
@@ -86,8 +86,8 @@
                         <div class="root">
                             
                             <h4>what we do</h4>
-                            <p>At Finance Plus, we focus on our our clients' most critical issues and thats greates opportunities.</p>
-                            <p>Generally, the services we offer and involve preparing a financial plan or rendering financial consultation for client based on the client’s financial goals and objectives.</p>
+                            <p id="fast">At Finance Plus, we focus on our our clients' most critical issues and thats greates opportunities.</p>
+                            <p id="fast">Generally, the services we offer and involve preparing a financial plan or rendering financial consultation for client based on the client’s financial goals and objectives.</p>
                             <button class="read">read more</button>
                         </div>
 
@@ -96,6 +96,7 @@
                         <div class="root">
                             <div class="card" style="width: 16rem;">
                                 <img src="images/finanicial1.jpg" class="card-img-top" alt="...">
+                                <img src="images/finanicial2.jpg" class="card-bottom-top" alt="">
                                 <div class="card-body">
                                     <h5 class="card-title">finanicial plaining</h5>
                                     <p class="card-text">There are many variation of passages of lorem Lorem Ipsum a available, but the majority have alteration amet.</p>
@@ -108,6 +109,7 @@
                         <div class="root">
                             <div class="card" style="width: 16rem;">
                                 <img src="images/finanicial2.jpg" class="card-img-top" alt="...">
+                                <img src="images/finanicial3.jpg" class="card-bottom-top" alt="">
                                 <div class="card-body">
                                     <h5 class="card-title">marketin straregy</h5>
                                     <p class="card-text">There are many variation of passages of lorem Lorem Ipsum a available, but the majority have alteration amet.</p>
@@ -120,6 +122,7 @@
                         <div class="root">
                             <div class="card" style="width: 16rem;">
                                 <img src="images/finanicial3.jpg" class="card-img-top" alt="...">
+                                <img src="images/finanicial1.jpg" class="card-bottom-top" alt="">
                                 <div class="card-body">
                                     <h5 class="card-title">apply application</h5>
                                     <p class="card-text">There are many variation of passages of lorem Lorem Ipsum a available, but the majority have alteration amet.</p>
@@ -324,7 +327,7 @@ suas utinam indoctum, ex usu ceteros comprehensam, labores facilisis eu mea. Adh
              <footer>
       <div class="overlay">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-3 col-xs-12">
         <div class="conrad">
           <h2>economy</h2>
             <i class="fas fa-map-marker-alt"></i><a href="">address: kafr elsheikh kallin</a>
@@ -332,16 +335,17 @@ suas utinam indoctum, ex usu ceteros comprehensam, labores facilisis eu mea. Adh
             <i class="fas fa-envelope-open"></i><a href="">alaaelzayat@gmail.com</a>
         </div>
         </div> 
-        <div class="col-md-3">
+        <div class="col-md-3 col-xs-12">
         <div class="conrad">
           <h3>our service</h3>
           <a href="">Education for all</a>
           <a href="">Treatment</a>
           <a href="">cloth</a>
           <a href="">food</a>
+          <a href="">design</a>
         </div>
       </div>
-         <div class="col-md-3">
+         <div class="col-md-3 col-xs-12">
           <div class="conrad">
           <h3>latest news</h3>
            <img src="images/build3.jpg"/>
@@ -356,7 +360,7 @@ suas utinam indoctum, ex usu ceteros comprehensam, labores facilisis eu mea. Adh
           </div>
       </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-xs-12">
          <div class="conrad">
 
           <h3>stay creative</h3>
