--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ suas utinam indoctum, ex usu ceteros comprehensam, labores facilisis eu mea. Adh
                 </div>
             </section>
                 <!---------footer---------->
-             <footer >
+       <div class="contact">     
     <div class="container">
     <div class="overlay">
     <div class="row">
@@ -362,7 +362,7 @@ suas utinam indoctum, ex usu ceteros comprehensam, labores facilisis eu mea. Adh
    </div>
 </div>
 
-       
+      
            <img src="images/build4.jpg"/>
             <div class="row">
             <div class="col">
@@ -391,7 +391,8 @@ suas utinam indoctum, ex usu ceteros comprehensam, labores facilisis eu mea. Adh
         </div>
       </div>
   </div>
-</footer>
+</div>
+
 <div class="clearfix"></div>
 <!--footer decond-->
 <div class="footer">
