--- a/index.html
+++ b/index.html
@@ -47,16 +47,17 @@
                     </div>
                     <!--nav-->
                     <nav class="col-md-9">
+                        
                     <button class="toggle-nav" style="border: 0;"><i class="fa fa-bars fa-2x"></i></button>
                          <ul class="nav-list">
                             <li class="list"><a href="#home">home</a></li>
-                            <li class="list"><a href="#about">about</a></li>
-                            <li class="list"><a href="#service">service</a></li>
-                            <li class="list"><a href="#portfolio">portfolio</a></li>
-                            <li class="list"><a href="#price">prices</a></li>
-                            <li class="list"><a href="#team">team</a></li>
-                            <li class="list"><a href="#testimonile">testimonile</a></li>
-                            <li class="list"><a href="#contact">contact</a></li>
+                            <li class="list"><a href="#about">aboutus</a></li>
+                            <li class="list"><a href="#service">services</a></li>
+                            <li class="list"><a href="#portfolio">pages</a></li>
+                            <li class="list"><a href="#price">projects</a></li>
+                            <li class="list"><a href="#team">blog</a></li>
+                            <li class="list"><a href="#testimonile">contactus</a></li>
+                            
                         </ul>
                         <div class="clearfix"></div>
                     </nav>
@@ -340,7 +341,7 @@ suas utinam indoctum, ex usu ceteros comprehensam, labores facilisis eu mea. Adh
                     <p class="text-center" id="txt">in this map you can arrived to the location of economy company</p>
                     <div class="row">
                         <div class="col-md-6">
-                          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7286615.899145397!2d30.8768375!3d26.906099949999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sar!2seg!4v1550848861069" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7286615.899145397!2d30.8768375!3d26.906099949999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sar!2seg!4v1550848861069" width="500" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                         <div class="col-md-6 contactus text-center">
                           <img src="images/undraw_code_typing_7jnv.svg"/>
@@ -438,12 +439,11 @@ suas utinam indoctum, ex usu ceteros comprehensam, labores facilisis eu mea. Adh
                       <div class="col-md-6 list">
                         <ul class="list-unstyled">
                           <li><a href="">home</li></a>
-                          <li><a href="">about</li></a>
-                          <li><a href="">plog</li></a>
-                          <li><a href="">contact</li></a>
-                          <li><a href="">faq</li></a>
-                          <li><a href="">support</li></a>
-                          <li><a href="">bye now</li></a>
+                          <li><a href="">aboutus</li></a>
+                          <li><a href="">pages</li></a>
+                          <li><a href="">projects</li></a>
+                          <li><a href="">blog</li></a>
+                          <li><a href="">contactus</li></a>
                         </ul>
                       </div>
                       </div>
@@ -460,6 +460,8 @@ suas utinam indoctum, ex usu ceteros comprehensam, labores facilisis eu mea. Adh
             <script src="js/owl.carousel.js"></script>
             <script src="js/owl.autoplay.js"></script>
             <script src="js/owl.navigation.js"></script>
+            <script src="js/jquery.nicescroll.js"></script>
             <script src="js/main.js"></script>
+
         </body>
     </html>
