--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ suas utinam indoctum, ex usu ceteros comprehensam, labores facilisis eu mea. Adh
                     <p class="text-center" id="txt">in this map you can arrived to the location of economy company</p>
                     <div class="row">
                         <div class="col-md-6">
-                          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7286615.899145397!2d30.8768375!3d26.906099949999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sar!2seg!4v1550848861069" width="500" height="600" frameborder="0" style="border:0" ></iframe>
+                          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7286615.899145397!2d30.8768375!3d26.906099949999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sar!2seg!4v1550848861069" width="500" height="600" frameborder="0" style="border:0" class="img-fluid"></iframe>
                         </div>
                         <div class="col-md-6 contactus text-center">
                           <img src="images/undraw_code_typing_7jnv.svg"/>
