--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container">
 
                    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-  <a class="navbar-brand" href="#"><span> N </span>avbar</a>
+  <a class="navbar-brand" href="#"><span> E</span>conomy</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
